# ostis-legislation

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  conanfile.py  docker-compose.yml  ostis-example-app.ini  repo.path  requirements.txt
knowledge-base/legal/belarus/: belarus_legal_article.scs  belarus_legal_term.scs
knowledge-base/legal/question_model/: question_model.gwf
knowledge-base/ui/menu/: ui_menu_na_example_commands.scs
legal.kb/legal/: legal_knowledge_base.scs  question_model.gwf
legal.kb/legal/belarus/: section_law_belarus.scs
legal.kb/ui/commands/: search_act_by_term.scs
legal.kb/ui/menu/:  ui_main_start_test.scs  ui_main_menu.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/test-module/: CMakeLists.txt  TestModule.cpp  TestModule.hpp
problem-solver/cxx/test-module/agents/: GenerateIncorrectAnswersAgent.cpp  GenerateIncorrectAnswersAgent.hpp  GenerateQuestionsAgent.cpp  GenerateQuestionsAgent.hpp  GenerateRecommendationsAgent.cpp  GenerateRecommendationsAgent.hpp
problem-solver/cxx/test-module/keynodes/: GenerateIncorrectAnswersKeynodes.hpp  GenerateQuestionsKeynodes.hpp  GenerateRecommendationsKeynodes.hpp
problem-solver/cxx/test-module/models/: MutableScAddrPair.cpp  MutableScAddrPair.hpp
problem-solver/cxx/testModule/: TestModule.cpp  TestModule.hpp
problem-solver/jesc/: build.gradle.kts
problem-solver/py/: cfg.ini  cfg.py  data.py  server.py  shutdown_manager.py
problem-solver/py-agent/: server.py
problem-solver/py-agent/agent/: ScTestTelegramAgent.py
problem-solver/py-refactored/: cfg.ini  cfg.py  server.py
problem-solver/py/agents/: ostis.py  (+1 more)
scripts/: build_problem_solver_with_jesc.sh  build_problem_solver_with_python.sh  build_py_agents.sh  install.sh  install_submodules.sh  run_py_server.sh
(+73577 files in other folders)
